test/SharedFiles/invalid-syntax/sass/style.sass
.funky
  font: italic 20px/24px
    family: "Open Sans, sans-serif